# test_task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  entrypoint  pyproject.toml
alembic/: env.py
alembic/versions/: 25179688ebac_init_table.py
app/: Dockerfile  main.py
app/api/v1/: tasks.py
app/core/: config.py  db.py  logger.py
app/messaging/: producer.py  rabbitmq.py
app/models/: consts.py  task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_task_repo.py  test_task_service.py
worker/: Dockerfile  main.py  task_worker.py
