[project]
name = "cism-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.2",
    "fastapi[standard]>=0.127.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.10",
]

[tool.ruff]
exclude = [
    ".venv",
    ".cache/*",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "Q", "TID", "ANN", "B", "SIM"]
ignore = []
preview = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
env_files = [
    ".env.test"
]
